--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
                 <a class="link" href="https://vk.com/nastineq">ВКонтакте</a>
             </div>
             <div class="content-right">
-                <img class="pic" src="me.JPG" alt="me">
+                <img class="pic" src="images/me.JPG" alt="me">
             </div>
         </div>
     </body>
 
 </html>
+
 
 
