--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Позиционирование элементов</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="./style/style.css"/>
     </head>
     <body>
         <div class="header">
@@ -12,7 +12,7 @@
         <h1>Горизонтальное позиционирование</h1>
         <div class="container">
             <div class="block"></div>
-            <img class="pic-2" src="pic10.jpg" alt="pic">
+            <img class="pic-2" src="./images/pic10.jpg" alt="pic">
         </div>
         <h1>Вертикальное позиционирование</h1>
         <div class="container-2">
@@ -38,7 +38,8 @@
             <div class="p-block-3"></div>
         </div>
         <div class="pic-3">
-            <img src="kitty.jpg" alt="kitty">
+            <img src="./images/kitty.jpg" alt="kitty">
         </div>
     </body>
+
 </html>
