--- a/page2.html
+++ b/page2.html
@@ -38,9 +38,10 @@
             <div class="p-block-3"></div>
         </div>
         <div class="pic-3">
-            <img src="./images/kitty.jpg" alt="kitty">
+            <img src="./images/kitty.jpg" alt="kitty" height: 100px width: 100px>
         </div>
     </body>
 
 </html>
+
 
