--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Лабораторная работа 2</title>
-        <link rel="stylesheet" href="style.css"/>
+        <title>Лабораторная работа 2-3-4</title>
+        <link rel="stylesheet" href="../styles/style.css"/>
     </head>
     <body>
         <div class="header">
@@ -54,5 +54,6 @@
     </body>
 
 </html>
+
 
 
