--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Позиционирование элементов</title>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="../styles/style.css"/>
     </head>
     <body>
         <div class="header">
@@ -42,4 +42,5 @@
             <img src="kitty.jpg" alt="kitty">
         </div>
     </body>
+
 </html>
