--- a/table.html
+++ b/table.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Таблица</title>
-        <link rel="stylesheet" href="table.css"/>
+        <link rel="stylesheet" href="../styles/table.css"/>
     </head>
     <body>
         <div class="header">
@@ -74,4 +74,5 @@
             </tr>
         </table>
     </body>
+
 </html>
