--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Лабораторная работа 2-3-4</title>
-        <link rel="stylesheet" href="../styles/style.css"/>
+        <link rel="stylesheet" href="styles/style.css"/>
     </head>
     <body>
         <div class="header">
@@ -54,6 +54,7 @@
     </body>
 
 </html>
+
 
 
 
