--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Позиционирование элементов</title>
-        <link rel="stylesheet" href="../styles/style.css"/>
+        <link rel="stylesheet" href="styles/style.css"/>
     </head>
     <body>
         <div class="header">
@@ -44,4 +44,5 @@
     </body>
 
 </html>
+
 
